--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -30,7 +30,11 @@ language acquisition
 
 %%INTRODUCTION%%%%
 \section{Introduction}
-So much intro right here
+- The emergence of language is cool
+- Paragraph - first word comprehension - Bergelson and Swingley
+- Paragraph - Why are we interested in first productions?
+- Paragraph - parent report - advantages and drawbacks 
+- Paragraph - summary of our work
 
 %%GENERAL DATA METHODS%%
 \section{General Data Collection Methods}
@@ -40,21 +44,21 @@ Data for this study is comprised of 4 different datasets, each obtained from a d
 \section{Dataset 1: Children's Discovery Museum Survey}
 
 \subsection{Participants}
-We sent out a brief survey on children’s first words to subscribed members of a large local children’s museum. We received 502 responses to our survey (215 female, 285 male, and 2 with no reported gender; M age = 11 mo, median = 10 mo). Due to the diversity of the San Jose community, several of the first word responses were not in English. Responses were translated into English where possible.
+We sent out a brief survey on children’s first words to subscribed members of a large local children’s museum. We received 502 responses to our survey (215 female, 285 male, and 2 with no reported gender; M age = 11 mo, median = 10 mo). Due to the diversity of the San Jose community, several of the first word responses were not in English. Responses were translated into English where possible. Responses that were not able to be translated were excluded from further analysis (N = 1).
 
 \subsection{Methods}
 Parents completed a brief web-based survey (created with JavaScript and HTML). The survey asked parents to list their child’s first word (excluding “mama” and “dada”), what they thought word referred to, a description of the situation surrounding the first word, the child’s age at time of utterance (≤10 mo or younger, 11 mo, 12 mo, 13 mo, ≥14 mo), the child’s current age, and their gender. Parents answered for only one child in this survey.
 
 \subsection{Data preparation}
-Parents’ responses were standardized for ease of analysis. Data cleaning involved fixing obvious spelling errors. When the meaning of the word was not immediately apparent, the researcher relied on the parent’s description of the circumstances surrounding the word and/or the parent’s classification of the word type. Words for which this procedure was not possible were excluded from further analyses (N=XYZ).
+Parents’ responses were standardized for ease of analysis. Data cleaning involved fixing obvious spelling errors. When the meaning of the word was not immediately apparent, the researcher relied on the parent’s description of the circumstances surrounding the word and/or the parent’s classification of the word type.
 
 %SURVEY2
 \section{Dataset 2: Amazon Mechanical Turk}
 
 \subsection{Participants}
-We recruited 1000 parents from Amazon Mechanical Turk to complete an updated survey on their children’s first words. We restricted the survey to parents in the United States. This survey allowed parents to answer for multiple children. We received 1671 responses (813 female, 858 male; M age = 10 mo, median = 10 mo). Approximately 21 children were excluded from subsequent analyses because they had not yet spoken. Responses were translated into English when possible and required.
+We recruited 1000 parents from Amazon Mechanical Turk to complete an updated survey on their children’s first words. We restricted the survey to parents in the United States. This survey allowed parents to answer for multiple children. We received 1671 responses (813 female, 858 male; M age = 10 mo, median = 10 mo). 21 children were excluded from subsequent analyses because they had not yet spoken (M age = 2.7 mo, median = 2 mo). Responses were translated into English when possible and required. Responses that were not able to be translated were excluded from further analysis (N = 1).
 
-\subsection{Methods}
+\subsection{Methods}s
 This survey was an extended version of the previous one. They survey allowed for input for multiple children, and asked parents to list their highest education level, child's birth order, sex,  first word (excluding “mama” and “dada”), word type, addressee of the first word, word age (0 – 24+ months), current age (0 – 18+ years), word language, and home language.  Responses were validated as the survey was completed, reducing the likelihood of erroneous or false responses. 
 
 \subsection{Data preparation}
@@ -71,5 +75,43 @@ Questions included on the survey were: The approximate phonological form of the 
 
  \subsection{Data processing}
 Data were handled similarly to Datasets 1 and 2. 
+
+%%%%WORDBANK%%%%
+\section{Dataset 4: MB-CDI Wordbank}
+
+\subsection{Participants}
+
+\subsection{Methods}
+
+\subsection{Data preparation}
+
+%Analyses
+\subsection{Age} 
+Conventional wisdom generally cites 12 months as the harbinger of the first word (Citation here). However, a child's first word is almost exclusively heard by a parent or other caretaker, and next to impossible to capture in a lab setting. However, that milestone is subject to the extreme variability in early language production (Fenson, 1994) and the potential pitfalls of parental memory (as discussed above). Given the possibility of very early noun comprehension (Bergelson and Swingley), we wished to explore the development of first word production, especially prior to 12 months. If children consistently produce a word-like utterance before 12 months, it is possible that very early language production does happen, but potentially in a phonologically unrecognizable and inconsistent form. \par
+Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-one children were excluded for not having spoken yet (M age  = 2.7 mo, median = 2 mo). 
+- Details of stats
+- Differences across studies
+- Data suggests
+
+\subsection{CDI Categories} 
+- Question
+- Describe analyses
+- Details of stats
+- Differences across studies
+- Data suggests
+
+\subsection{Input Frequencies}
+- Question
+- Describe analyses
+- Details of stats
+- Differences across studies
+- Data suggests
+
+\section{Discussion}
+
+\section{Acknowledgements}
+
+
+
 
 \end{document}
