age image and analyses

--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -89,6 +89,15 @@ Data were handled similarly to Datasets 1 and 2.
 \subsection{Age} 
 Conventional wisdom generally cites 12 months as the harbinger of the first word (Citation here). However, a child's first word is almost exclusively heard by a parent or other caretaker, and next to impossible to capture in a lab setting. However, that milestone is subject to the extreme variability in early language production (Fenson, 1994) and the potential pitfalls of parental memory (as discussed above). Given the possibility of very early noun comprehension (Bergelson and Swingley), we wished to explore the development of first word production, especially prior to 12 months. If children consistently produce a word-like utterance before 12 months, it is possible that very early language production does happen, but potentially in a phonologically unrecognizable and inconsistent form. \par
 Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-one children were excluded for not having spoken yet (M age  = 2.7 mo, median = 2 mo). 
+
+%FIGURE 1
+\begin{figure}[t]
+\begin{center}
+\includegraphics[width=1\linewidth]{Figure1.pdf}
+\end{center}
+\caption{Figure 1: Age graph showing the cumulative probability of producing a word as a function of age.}\
+\end{figure}
+
 - Details of stats
 - Differences across studies
 - Data suggests
