working on analyses

--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -99,11 +99,22 @@ Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-
 \end{figure}
 
 - Details of stats
+- To do here: difference between females and males (none for Turk or CDM)
 - Differences across studies
 - Data suggests
 
 \subsection{CDI Categories} 
-- Question
+Previous work has established that the CDI normative categories are not equally represented in first word production (Fenson et al., 1994), and that certain semantic categories are more likely to be produced during different stages of development. This finding motivated our analysis of CDI category frequencies for the datasets.\par
+CDI categories were assigned by the researcher, and validated across datasets. In instances where words did not appear on the CDI categories were assigned ad hoc. Ninety-one children were excluded because the word was unable to categorized. We grouped the data by dataset, and performed an age split at 12 months. Figure 2 shows the frequencies of the CDI categories split by age and grouped by dataset.
+
+%FIGURE 2
+\begin{figure}[t]
+\begin{center}
+\includegraphics[width=1\linewidth]{Figure2.pdf}
+\end{center}
+\caption{Figure 2: Histogram of CDI category frequencies across datasets.}
+\end{figure}
+
 - Describe analyses
 - Details of stats
 - Differences across studies
