--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -22,7 +22,7 @@
 
 %ABSTRACT
 \begin{abstract}
-The first word, an intimate moment between child and caretaker, exhibits a tremendous amount of variability in semantic categorization, phonological complexity, and age of onset. Through several large datasets of parental report of children’s first words, we investigate patterns in first word production, including the age of onset, distribution of MB-CDI categories, and first words in relation to parental input. In three analyses, we explore the timecourse and distribution of children’s first recognizable language productions. We find that, contra conventional wisdom, more than 75% of children in our datasets produce a first word by their first birthday. In our second analysis, we find that older children produce more words in certain semantic categories. Finally, we take all the unique occurrences of words across the datasets, and try to predict first word production via parental input taken from the CHILDES corpus. Overall, we find that parental report of a child’s first word yields rich and consistent data on what is typically an unobservable dyadic moment, and that the words children produce first may be affected by semantic differences as well as by parental input.
+The first word, an intimate moment between child and caretaker, exhibits a tremendous amount of variability in semantic categorization, phonological complexity, and age of onset. Through several large datasets of parental report of children’s first words, we investigate patterns in first word production, including the age of onset, distribution of MB-CDI categories, and first words in relation to parental input. In three analyses, we explore the timecourse and distribution of children’s first recognizable language productions. We find that, contra conventional wisdom, more than 75% of children in our datasets produce a first word by their first birthday. In our second analysis, we find that children produce more words in certain semantic categories. Finally, we take all the unique occurrences of words across the datasets, and try to predict first word production via parental input taken from the CHILDES corpus. Overall, we find that parental report of a child’s first word yields rich and consistent data on what is typically an unobservable dyadic moment, and that the words children produce first may be affected by semantic differences as well as by parental input.
 
 \textbf{Keywords:}
 language acquisition
@@ -30,7 +30,7 @@ language acquisition
 
 %%INTRODUCTION%%%%
 \section{Introduction}
-- The emergence of language is cool
+A child's first word is a pivotal moment in a child's development, the start of a verbal dialogue that will continue and develop over the course of a child's life. The first word is not only important because it marks the beginning of a child's productive language capabilities, but it also offers a small glimpse into the mind of an infant. A first utterance not only gives insight into what a child is willing to talk about, but also what a child is able to talk about, in terms of conceptual categories and phonological production. While there has been much research of the development of children's general vocabulary development (citation here), there has been little research done on a child's first word. This is understandable, as it is a discrete event almost exclusively involving only the parent and child. 
 - Paragraph - first word comprehension - Bergelson and Swingley
 - Paragraph - Why are we interested in first productions?
 - Paragraph - parent report - advantages and drawbacks 
@@ -86,6 +86,8 @@ Data were handled similarly to Datasets 1 and 2.
 \subsection{Data preparation}
 
 %Analyses
+\section{Analyses}
+
 \subsection{Age} 
 Conventional wisdom generally cites 12 months as the harbinger of the first word (Citation here). However, a child's first word is almost exclusively heard by a parent or other caretaker, and next to impossible to capture in a lab setting. However, that milestone is subject to the extreme variability in early language production (Fenson, 1994) and the potential pitfalls of parental memory (as discussed above). Given the possibility of very early noun comprehension (Bergelson and Swingley), we wished to explore the development of first word production, especially prior to 12 months. If children consistently produce a word-like utterance before 12 months, it is possible that very early language production does happen, but potentially in a phonologically unrecognizable and inconsistent form. \par
 Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-one children were excluded for not having spoken yet (M age  = 2.7 mo, median = 2 mo). 
@@ -104,7 +106,7 @@ Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-
 - Data suggests
 
 \subsection{CDI Categories} 
-Previous work has established that the CDI normative categories are not equally represented in first word production (Fenson et al., 1994), and that certain semantic categories are more likely to be produced during different stages of development. This finding motivated our analysis of CDI category frequencies for the datasets.\par
+Previous work has established that the CDI normative categories are not equally represented in first word production (Fenson et al., 1994), and that certain semantic categories are more likely to be produced during different stages of development. This finding motivated our analysis of CDI category frequencies for the datasets. \par
 CDI categories were assigned by the researcher, and validated across datasets. In instances where words did not appear on the CDI categories were assigned ad hoc. Ninety-one children were excluded because the word was unable to categorized. We grouped the data by dataset, and performed an age split at 12 months. Figure 2 shows the frequencies of the CDI categories split by age and grouped by dataset.
 
 %FIGURE 2
@@ -116,8 +118,10 @@ CDI categories were assigned by the researcher, and validated across datasets. I
 \end{figure}
 
 - Describe analyses
-- Details of stats
+- Details of stats- 
 - Differences across studies
+Consistent with previous work, we observe first words being drawn from certain CDI categories over others. We find that Animal, Games and Routines, Toy, and People words are more frequently first productions for both older and younger children, and that these patterns seem to be consistent across development. \par
+These data support previous findings on CDI category analyses of early language production 
 - Data suggests
 
 \subsection{Input Frequencies}
