Workin on them analyses

--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -89,8 +89,8 @@ Data were handled similarly to Datasets 1 and 2.
 \section{Analyses}
 
 \subsection{Age} 
-Conventional wisdom generally cites 12 months as the harbinger of the first word (Citation here). However, a child's first word is almost exclusively heard by a parent or other caretaker, and next to impossible to capture in a lab setting. However, that milestone is subject to the extreme variability in early language production (Fenson, 1994) and the potential pitfalls of parental memory (as discussed above). Given the possibility of very early noun comprehension (Bergelson and Swingley), we wished to explore the development of first word production, especially prior to 12 months. If children consistently produce a word-like utterance before 12 months, it is possible that very early language production does happen, but potentially in a phonologically unrecognizable and inconsistent form. \par
-Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-one children were excluded for not having spoken yet (M age  = 2.7 mo, median = 2 mo). 
+Conventional wisdom generally cites 12 months as the harbinger of the first word (Citation here). However, a child's first word is almost exclusively heard by a parent or other caretaker, and next to impossible to capture in a lab setting. However, that milestone is subject to the extreme variability in early language production (Fenson, 1994) and the potential pitfalls of parental memory (as discussed above). Given the possibility of very early noun comprehension (Bergelson and Swingley), we wished to explore the development of first word production, especially prior to 12 months.  \par
+Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-one children were excluded for not having spoken yet (M age  = 2.7 mo, median = 2 mo). We then plotted the cumulative probability of a child having produced a first word as a function of their age (Figure 1).
 
 %FIGURE 1
 \begin{figure}[t]
@@ -100,15 +100,13 @@ Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-
 \caption{Figure 1: Age graph showing the cumulative probability of producing a word as a function of age.}\
 \end{figure}
 
-- Details of stats
-- To do here: difference between females and males (none for Turk or CDM)
-- Differences across studies
-- Data suggests
+Before 12 months, approximately 75% of children have produced a first word, and we see a gradual but consistent increase as the child ages as expected. The plot of the Mechanical Turk data, the largest dataset, is most likely the most representative of child word production, while the other datasets asymptope fairly quickly between about 14 and 17 months. 
+These data suggest that children are speaking before 12 months relatively frequently. To discern whether there might be a bias on behalf of parents of older children to report a younger first word, we ran a (SOMETHING test - regression?), but did not receive a significant result. \par
+Why are some children producing language earlier than other children, and what does this reveal about the relationship between their conceptual and linguistic development? When children produce early language (<12 months) as opposed to a later one, are they choosing to produce conceptually different words than children who speak later? Or, are conceptual and linguistic development more closely linked? In our next analysis, we examined the CDI category frequencies of children's first words to explore whether very early first words differ conceptually from later-produced words. 
 
 \subsection{CDI Categories} 
-Previous work has established that the CDI normative categories are not equally represented in first word production (Fenson et al., 1994), and that certain semantic categories are more likely to be produced during different stages of development. This finding motivated our analysis of CDI category frequencies for the datasets. \par
-CDI categories were assigned by the researcher, and validated across datasets. In instances where words did not appear on the CDI categories were assigned ad hoc. Ninety-one children were excluded because the word was unable to categorized. We grouped the data by dataset, and performed an age split at 12 months. Figure 2 shows the frequencies of the CDI categories split by age and grouped by dataset.
-
+Previous work has established that the CDI normative categories are not equally represented in first word production (Fenson et al., 1994). If early word producers have a different distribution of CDI categories, this might suggest that linguistic development is loosely related to conceptual development, and that a later producer is sampling from a larger array of words that are conceptually available to her.\par
+In this analysis, CDI categories were assigned by the researcher based on the MB-CDI parental report form, and validated across datasets. In instances where words did not appear on the MB-CDI,  categories were assigned ad hoc and validated across datasets for consistency. Ninety-one children were excluded because their first word was unable to categorized. We grouped the data by dataset, and performed an age split at 12 months. Figure 2 shows the frequencies of the CDI categories split by age and grouped by dataset.
 %FIGURE 2
 \begin{figure}[t]
 \begin{center}
@@ -116,6 +114,10 @@ CDI categories were assigned by the researcher, and validated across datasets. I
 \end{center}
 \caption{Figure 2: Histogram of CDI category frequencies across datasets.}
 \end{figure}
+
+Distributions of CDI category frequency across all 4 datasets almost identical. 
+
+**NOTE TO ROSE** - I think we should also put in the word-item analyses for CDM and Turk here - not only are the conceptual categories the same, the words within those categories are the same
 
 - Describe analyses
 - Details of stats- 
