--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -117,7 +117,7 @@ In this analysis, CDI categories were assigned by the researcher based on the MB
 
 Distributions of CDI category frequency across all 4 datasets almost identical. 
 
-**NOTE TO ROSE** - I think we should also put in the word-item analyses for CDM and Turk here - not only are the conceptual categories the same, the words within those categories are the same
+**NOTE TO ROSE** - I think we should also put in the word-item analyses for CDM and Turk here - not only are the conceptual categories the same, the words within those categories are the same?? This seems reasonable!
 
 - Describe analyses
 - Details of stats- 
